# aha-kuka

./: Cargo.toml
migrations/: 20250915005629_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs
tests/: health_check.rs
