[package]
name = "aha-kuka"
version = "0.1.0"
edition = "2024"

[lib]
path  = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "aha-kaku"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
log = { version = "0.4", features = ["std"] }
simplelog = { version = "^0.11.0", features = ["paris"] }

[dev-dependencies]
reqwest = "0.12"
